# DAIoT_TP_Final

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
db/aws/actualizarAtlas/: package-lock.json  package.json
db/aws/fakeAtlas/: index.js  package-lock.json  package.json
db/aws/leerAtlas/: index.js  package-lock.json  package.json
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c
main/networking/wifi/: app_wifi.c
main/tasks/temp_subpub_led/: temp_subpub_led.c  temp_subpub_led.h  temp_subpub_led_config.h
main/tasks/temp_subpub_led/hardware_drivers/: app_driver.c
src/: docker-compose.yml  package-lock.json
src/backend/: Dockerfile  config.js  index.js  package-lock.json  package.json
src/backend/db/: mongo.js
src/backend/routes/dispositivos/: index.js
src/backend/routes/mediciones/: index.js
src/frontend/dam/: Dockerfile  package-lock.json  package.json
src/frontend/dam/src/: index.html
src/frontend/dam/src/app/: app-routing.module.ts
src/frontend/dam/src/app/Interfaces/: dispositivos.ts  mediciones.ts
src/frontend/dam/src/app/directivas/: color-boton.directive.spec.ts  color-boton.directive.ts
src/frontend/dam/src/app/dispositivo/: dispositivo.module.ts  dispositivo.page.html  dispositivo.page.ts
src/frontend/dam/src/app/home/: home.module.ts  home.page.html  home.page.ts
src/frontend/dam/src/app/mediciones/: mediciones.module.ts  mediciones.page.html  mediciones.page.ts
src/frontend/dam/src/app/pipes/: epoch-to-date-time.pipe.spec.ts  epoch-to-date-time.pipe.ts  shared-module.ts
(+1 files in other folders)
